[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Alessandro Forina", email = "alessandro.forina98@gmail.com"},
]
dependencies = []
description = "A custom super-mario package for a quick and fun gameplay!"
license = "MIT"
name = "super-mario"
requires-python = ">=3.12"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pytest,
    "ruff"
]